--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,29 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/ktr0731/go-semver
+    working_directory: /go/go-semver
     docker:
-      - image: circleci/golang:1.10
+      - image: circleci/golang:1.11.2
+        environment:
+          GO111MODULE: "on"
+          GOPATH: /go
 
     steps:
       - checkout
+
+      - restore_cache:
+          keys:
+            - mod-{{ checksum "go.sum" }}
+
+      - run:
+          name: setup
+          command: |
+            go mod download
+
+      - save_cache:
+          key: mod-{{ checksum "go.sum" }}
+          paths:
+            - /go/pkg/mod
 
       - run:
           name: build
